--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "test": "jest --coverage"
   },
   "keywords": [],
   "author": "Alejandro Andres Barrios",
@@ -15,8 +16,10 @@
     "cors": "2.8.5",
     "express": "5.1.0",
     "express-session": "1.18.2",
+    "jest": "^30.1.3",
     "mongoose": "8.17.0",
     "nodemailer": "7.0.5",
     "sha256": "0.2.0"
   }
 }
+
