--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
+# Dependencias
 /node_modules
+/package-lock.json
+/yarn.lock
+
+# Compilados / builds
+/coverage/
+/build/
+
+# Configuración de IDEs
+/.idea/
+/.vscode/
+
+# Variables de entorno
+.env
